--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 	<head>
-		<title>MONJA - Portfolio</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>MONJA - Portfolio</title>
         
+        <meta charset='utf-8' name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css"> 
+      
     </head>
 	<body>
         <!--Home view-->
